--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -75,7 +75,7 @@ button, a {
     transform: translateX(-275px);
     filter: brightness(0.6); // i need this or the header doesnt darken 
     position: relative;
-    
+
     // this adds a darkend element accross the whole page when the body shifts on the nav sidebar pop out
     &::after {
         content: '';
@@ -88,6 +88,11 @@ button, a {
         z-index: 999;
         pointer-events: none; 
     }
+}
+
+// this needs to be here as we have to specifically target the footer to shift as it doesnt include in the body for some weird reason
+footer, .bottom-footer {
+    transition: transform 0.3s ease-in-out;
 }
 
 ////////////////////////////////////
